# application

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  multistrap.conf  notes.md  readme.md  tinyghettobox.sqlite
admin_interface/: requests.http
admin_interface/server/: Cargo.toml
admin_interface/server/src/: commands.rs  error.rs  file_cache.rs  main.rs
admin_interface/server/src/routes/: image.rs  library.rs  mod.rs  spotify.rs  static_files.rs  system_config.rs
admin_interface/web_ui/: README.md  index.html  next.config.js  package.json  tsconfig.json  vite.config.ts
admin_interface/web_ui/src/: App.model.css  App.tsx  index.tsx  theme.ts
admin_interface/web_ui/src/components/: FolderAvatar.tsx  Notification.tsx  Sortable.tsx
admin_interface/web_ui/src/pages/: Root.tsx
admin_interface/web_ui/src/pages/MediaLibrary/: FolderList.tsx  MediaLibrary.module.scss  MediaLibrary.tsx  SortButton.tsx  SortableList.module.scss  TrackList.tsx  useLibraryEntry.ts
admin_interface/web_ui/src/pages/SpotifyConfig/: SpotifyConfig.tsx  SpotifyForm.tsx  useSteps.ts
admin_interface/web_ui/src/pages/SystemConfig/: AudioSettings.tsx  ConfigProvider.tsx  DisplaySettings.tsx  PowerSettings.tsx  SystemConfig.tsx  SystemSettings.tsx  TimerConfig.tsx
admin_interface/web_ui/src/util/: api.ts  base64.ts  image.ts
database/: Cargo.toml  build.rs
database/src/: lib.rs  util.rs
database/src/model/: library_entry.rs  mod.rs  spotify_config.rs  system_config.rs  track_source.rs
database/src/repository/: library_entry.rs  mod.rs  spotify_config.rs  system_config.rs  track_source.rs
database/types/: LibraryEntry.d.ts  SpotifyConfig.d.ts  SystemConfig.d.ts  TrackSource.d.ts  Variant.d.ts
debian/: Cargo.toml  Makefile  dummy.rs
debian/DEBIAN/: control  postinst  prerm
debian/_debian/: changelog  control  copyright  postinst  prerm  rules  rulessss
debian/boot/: cmdline.txt  dietpi-wifi.txt  dietpi.txt  splash.txt
debian/etc/: asound.conf
debian/etc/spotifyd/: spotifyd.conf
debian/etc/systemd/system/: spotifyd.service  tgb.admin-interface.service  tgb.user-interface.service
debian/etc/systemd/system/getty@tty1.service.d/: dietpi-autologin.conf
debian/lib/systemd/system/: splashscreen.service  spotifyd.service  tgb.admin-interface.service  tgb.user-interface.service
kira_remote_stream/: Cargo.toml
kira_remote_stream/src/: lib.rs  media_source.rs  remote_decoder.rs
kira_remote_stream/src/decoder/: mod.rs  symphonia.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_tables.rs  m20240115_221627_create_default_spotify_config.rs  m20240115_221627_create_default_system_config.rs  m20240212_225127_create_root_library_entry.rs  m20240321_123652_add_library_entry_sort_key.rs  m20250315_224856_track_source_optional_library_entry_id.rs
player/: Cargo.toml
player/src/: lib.rs  main.rs  main_blocking.rs  main_example.rs  main_rodio.rs
player/src/player/: mod.rs  player.rs  queue.rs  spotify.rs  spotify_manager.rs  timer.rs
player/src/player/play_target/: local.rs  mod.rs  remote.rs  spotify.rs
user_interface/: Cargo.toml  build.rs
user_interface/resources/: resources.gresources.xml  styles.css
user_interface/src/: main.rs  splash.rs
user_interface/src/components/: mod.rs
user_interface/src/components/content/: component.rs  content.ui  mod.rs  widget.rs
user_interface/src/components/detail_list/: component.rs  detail_list.ui  mod.rs  widget.rs
user_interface/src/components/detail_list_item/: component.rs  detail_list_item.ui  mod.rs  widget.rs
user_interface/src/components/empty_info/: component.rs  empty_info.ui  mod.rs  widget.rs
user_interface/src/components/log_overlay/: component.rs  log_overlay.ui  mod.rs  widget.rs
user_interface/src/components/navbar/: component.rs  mod.rs  navbar.ui  widget.rs
user_interface/src/components/player_bar/: component.rs  mod.rs  player_bar.ui  widget.rs
user_interface/src/components/ripple/: component.rs  mod.rs  ripple.ui  widget.rs
user_interface/src/components/shutdown_timer/: component.rs  mod.rs  shutdown_timer.ui  widget.rs
user_interface/src/components/tile_list/: component.rs  mod.rs  tile_list.ui  widget.rs
user_interface/src/components/tile_list_item/: component.rs  mod.rs  tile_list_item.ui  widget.rs
user_interface/src/components/window/: component.rs  mod.rs  widget.rs  window.ui
user_interface/src/state/: action.rs  dispatcher.rs  mod.rs  state.rs
user_interface/src/util/: debouncer.rs  memory_subscriber.rs  mod.rs
(+20 files in other folders)
