[package]
name = "database"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
chrono = "0.4.31"
once_cell = "1.19.0"
sea-orm = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio", "macros", "chrono"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tracing = "0.1.40"
ts-rs = { version = "9.0.1", features = ["chrono-impl", "no-serde-warnings"] }
regex = "1.10.3"

[build-dependencies]
chrono = "0.4.31"
regex = "1.10.3"
sea-orm = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio", "macros", "chrono"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
ts-rs = "9.0.1"
