[package]
name = "kira-remote-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { version = "0.10.2", features = ["symphonia"] }
stream-download = { version = "0.14.1", features = ["reqwest", "reqwest-native-tls"] }
symphonia = { version = "0.5.4", default-features = false }
