[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.31"
database = { path = "../database" }
kira = "0.8.7"
kira-remote-stream = { path = "../kira_remote_stream" }
rangemap = "1.4.0"
rspotify = { version = "0.13.1", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
symphonia = "0.5.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "full", "tracing"] }
tracing = "0.1.40"
