[package]
name = "user_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
player = { path = "../player" }
async-channel = "2.2.0"
gtk4 = { version = "0.8.1", package = "gtk4", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing-mutex = "0.3.0"
console-subscriber = "0.3.0"

[build-dependencies]
glib-build-tools = "0.19.0"

[features]
gtk4_6 = ["gtk4/v4_6"]
gtk4_12 = ["gtk4/v4_12"]
