[package]
name = "user_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
player = { path = "../player" }
async-channel = "2.2.0"
gtk4 = { version = "0.9.0", package = "gtk4", default-features = false, features = ["v4_8"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.4.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
chrono = "0.4.35"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["profiling"] }

[build-dependencies]
glib-build-tools = "0.20.0"

[features]
gtk4_8 = ["gtk4/v4_8"]
gtk4_12 = ["gtk4/v4_12"]

[profile.release]
debug = 1