[package]
name = "admin_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../../database" }
migration = { path = "../../migration" }
actix-web = { version = "4.4.1", features = ["macros"] }
actix-files = "0.6.5"
chrono = "0.4.34"
cookie_store = "0.21.0"
rspotify = {  version = "0.13.0", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.6" }
